--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, viewport-fit=cover">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>Finda</title>
+    <title>FINDA</title>
     <!-- Bootstrap CSS -->
     <link rel="stylesheet" href="css/bootstrap.min.css">
 
@@ -21,7 +21,7 @@
 
     <!-- Navigation bar -->
 
-    <nav class="navbar sticky-top bg-light navbar-light navbar-expand-lg navbar-fixed-top">
+    <nav class="navbar sticky-top bg-light navbar-dark navbar-expand-lg navbar-fixed-top">
         <div class="container">
             <a href="index.html" class="navbar-brand"><span id="logo" title="logo">finda</span></a>
 
@@ -61,7 +61,7 @@
                         <div class="col-md-6 my-4">
                             <h1 id="heading" class="pt-4">The free and fun way to learn financials</h1>
                             <a type="button" href="register.html" class="btn btn-primary btn-block">Get Started</a>
-                            <a type="button" class="btn btn-secondary btn-block">I already have an account</a>
+                            <a type="button" href="login.html" class="btn btn-secondary btn-block">I already have an account</a>
                         </div>
                     </div>
                 </div>
@@ -126,77 +126,17 @@
 <!-- End Steps content -->
 
 
-<!-- Review section -->
 
-<div class="container">
-    <div class="row my-5">
-        <div class="col-md-4 my-4">
-            <h6>What our client loved us</h6>
-            <h3 id="lead">Our customers believed in us</h3>
-        </div>
 
-        <div class="col-md-4 my-4">
-            <div class="review-box">
-                <p class="review-box-header">"Great Card"</p>
-                <p class="review-box-para">The next big thing! Really loved the card designs and the 10/10 features offered!</p>
-                <p class="review-box-para font-weight-bold">Rachel Lee</p>
-            </div>
-        </div>
-
-        <div class="col-md-4 my-4">
-            <div class="review-box">
-                <p class="review-box-header">"Loved it!"</p>
-                <p class="review-box-para">The next big thing! Really loved the card designs and the 10/10 features offered!</p>
-                <p class="review-box-para font-weight-bold">Sarah Muskyen</p>
-            </div>
-        </div> 
-    </div>
-</div>
-
-<!-- Contact Us -->
-
-<div class="container">
-    <div class="row my-5">
-        <div class="col-md-5 my-4">
-            <h6>Contact Us</h6>
-            <h3 id="lead">We value our customer, 
-                feel free to hit us with 
-                questions!</h3>
-        </div>
-
-        <div class="col-md-7 my-4">
-            <form>
-                <div class="form-row">
-                  <div class="form-group col-md-6">
-                        <input type="text" class="form-control" placeholder="Name">
-                  </div>
-                  <div class="form-group col-md-6">
-                        <input type="email" class="form-control" placeholder="Email">
-                  </div>
-                 </div>
-                  
-                <div class="form-group">
-                    <input type="text" class="form-control" placeholder="Subject">
-                </div>
-                  
-                <div class="form-group">
-                    <textarea type="text" class="form-control" rows="3" placeholder="Message"></textarea>
-                </div>
-
-                <button type="submit" class="contact-button my-1 float-sm-right text-uppercase">Send Message</button>
-              </form>
-        </div>
-    </div>
-</div>
 
 <!-- Footer -->
 
 <div class="container">
     <div class="row my-5">
         <div class="col-md-4 my-4">
-            <p class="footer-title">HUUGE.space</p>
+            <p class="footer-title">Finda by SMURT</p>
             <p class="footer-text">We are bunch young aspiring techpreneurs’, who have been working together for several years.</p>
-            <p class="footer-copyright">Copyright © 2020 Huuge.space. All rights reserved.</p>
+            <p class="footer-copyright">Copyright © 2020 SMURT. All rights reserved.</p>
         </div>
 
         <div class="col-md-4 my-4 text-center py-1 justify-content-center footer-2">
@@ -209,8 +149,6 @@
             <p class="font-weight-bold">Quick Links</p>
            <p><a href="#">Terms of Service</a></p>
            <p><a href="#">Privacy Policy</a></p>
-           <p><a href="#">Refund Policy</a></p>
-           <p><a href="#">Shipping Policy</a></p>
         </div>
     </div>
 </div>
