--- a/login.html
+++ b/login.html
@@ -40,10 +40,10 @@
 
             <div class="collapse navbar-collapse" id="navbarResponsive">
                 <ul class="navbar-nav mx-auto">
-                    <li class="nav-item"><a href="store.html" class="nav-link">Store</a></li>
-                    <li class="nav-item"><a href="device-compatibility.html" class="nav-link">Device Compatibility</a></li>
-                    <li class="nav-item"><a href="faq.html" class="nav-link">FAQ</a></li>
-                    <li class="nav-item"><a href="login.html" class="nav-link active">My Account</a></li>
+                    <li class="nav-item"><a href="xxx.html" class="nav-link">Store</a></li>
+                    <li class="nav-item"><a href="xxx.html" class="nav-link">Device Compatibility</a></li>
+                    <li class="nav-item"><a href="xxx.html" class="nav-link">FAQ</a></li>
+                    <li class="nav-item"><a href="xxx.html" class="nav-link active">My Account</a></li>
                 </ul>
 
                 <ul class="navbar-nav mr">
