--- a/register.html
+++ b/register.html
@@ -72,7 +72,7 @@
         </div>
 
         <div class="col-md-6 my-4">
-            <a href="quiz.html" rel="noopener noreferrer" id="register">
+            <a href="#" rel="noopener noreferrer" id="register">
             <div class="review-box">
                 <img src="img/investing.svg" width="100px" alt="" class="review-box-img mx-auto d-block">
                 <p class="review-box-para text-center" style="font-size: 30px;">Financial Instrument</p>
@@ -83,7 +83,7 @@
 
         
             <div class="col-md-6 my-4">
-                <a href="quiz.html" rel="noopener noreferrer" id="register">
+                <a href="#" rel="noopener noreferrer" id="register">
                 <div class="review-box">
                     <img src="img/options.svg" width="100px" alt="" class="review-box-img mx-auto d-block">
                     <p class="review-box-para text-center" style="font-size: 30px;">Financial Planning</p>
@@ -94,7 +94,7 @@
     
             <div class="col-md-6 my-4">
                 <div class="review-box">
-                    <a href="quiz.html" rel="noopener noreferrer" id="register">
+                    <a href="#" rel="noopener noreferrer" id="register">
                     <img src="img/analyse.svg" width="130px" alt="" class="review-box-img mx-auto d-block">
                     <p class="review-box-para text-center" style="font-size: 30px;">Learn to Invest</p>
                     <p class="review-box-para font-weight-bold text-center">Expert</p>
