--- a/quiz.html
+++ b/quiz.html
@@ -7,14 +7,14 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <!-- Bootstrap CSS -->
     <!-- Bootstrap CSS -->
-    <link rel="stylesheet" href="css/bootstrap.min.css">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.0/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-KyZXEAg3QhqLMpG8r+8fhAXLRk2vvoC2f3B09zVXn8CA5QIVfZOJ3BCsw2P0p/We" crossorigin="anonymous">
 
     <!-- Style CSS -->
     <link rel="stylesheet" href="css/style.css">
 
     <!-- Google Fonts -->
     <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@300;400;500;600;700&display=swap" rel="stylesheet">
-   
+    <script src="js/jquery.min.js"></script>
     <title>FINDA</title>
 </head>
 
@@ -124,7 +124,7 @@
         if (element.classList.contains("disabled")) {
             console.log("here");
             // next page 
-            window.location = "www.google.com";
+            window.location = "quiz_last.html";
         }
 
         console.log("selected_answer: " + selected_ans);
@@ -196,7 +196,7 @@
 </body>
 
 <!-- jQuery -->
-<script src="js/jquery.min.js"></script>
+
 <!-- Bootstrap JS -->
 <script src="js/bootstrap.bundle.min.js"></script>
 <!-- Popper JS  -->
