--- a/sign-up.html
+++ b/sign-up.html
@@ -5,7 +5,7 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, viewport-fit=cover">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>Huugespace</title>
+    <title>FINDA</title>
     <!-- Bootstrap CSS -->
     <link rel="stylesheet" href="css/bootstrap.min.css">
 
@@ -18,19 +18,12 @@
   </head>
   <body>
 
-    <!-- Top Bar -->
-    <div class="top-bar">
-        <div class="container">
-            <div class="col-12"></div>
-        </div>
-    </div>
-    <!-- End Top Bar -->
 
     <!-- Navigation bar -->
 
-    <nav class="navbar bg-light navbar-light navbar-expand-lg navbar-fixed-top">
+    <nav class="navbar sticky-top bg-light navbar-dark navbar-expand-lg navbar-fixed-top">
         <div class="container">
-            <a href="index.html" class="navbar-brand"><span id="logo" title="logo">huuge</span></a>
+            <a href="index.html" class="navbar-brand"><span id="logo" title="logo">finda</span></a>
 
 
             <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarResponsive">
@@ -40,15 +33,14 @@
 
             <div class="collapse navbar-collapse" id="navbarResponsive">
                 <ul class="navbar-nav mx-auto">
-                    <li class="nav-item"><a href="store.html" class="nav-link">Store</a></li>
-                    <li class="nav-item"><a href="device-compatibility.html" class="nav-link">Device Compatibility</a></li>
-                    <li class="nav-item"><a href="faq.html" class="nav-link">FAQ</a></li>
+                    <li class="nav-item"><a href="login.html" class="nav-link">Learn</a></li>
+                    <li class="nav-item"><a href="login.html" class="nav-link">Stories</a></li>
+                    <li class="nav-item"><a href="login.html" class="nav-link">Discuss</a></li>
+                    <li class="nav-item"><a href="login.html" class="nav-link">FINvestment</a></li>
                     <li class="nav-item"><a href="login.html" class="nav-link">My Account</a></li>
                 </ul>
 
-                <ul class="navbar-nav mr">
-                    <li class="nav-item"><a href="#" class="nav-link"><i id="shoppingcart" class="fas fa-shopping-cart"></i></a></li>
-                </ul>
+    
             </div>
 
         </div>
@@ -107,9 +99,9 @@
 <div class="container">
     <div class="row my-5">
         <div class="col-md-4 my-4">
-            <p class="footer-title">HUUGE.space</p>
+            <p class="footer-title">Finda by SMURT</p>
             <p class="footer-text">We are bunch young aspiring techpreneurs’, who have been working together for several years.</p>
-            <p class="footer-copyright">Copyright © 2020 Huuge.space. All rights reserved.</p>
+            <p class="footer-copyright">Copyright © 2020 SMURT. All rights reserved.</p>
         </div>
 
         <div class="col-md-4 my-4 text-center py-1 justify-content-center footer-2">
@@ -122,8 +114,6 @@
             <p class="font-weight-bold">Quick Links</p>
            <p><a href="#">Terms of Service</a></p>
            <p><a href="#">Privacy Policy</a></p>
-           <p><a href="#">Refund Policy</a></p>
-           <p><a href="#">Shipping Policy</a></p>
         </div>
     </div>
 </div>
