--- a/index.html
+++ b/index.html
@@ -33,9 +33,10 @@
 
             <div class="collapse navbar-collapse" id="navbarResponsive">
                 <ul class="navbar-nav mx-auto">
-                    <li class="nav-item"><a href="store.html" class="nav-link">Store</a></li>
-                    <li class="nav-item"><a href="device-compatibility.html" class="nav-link">Device Compatibility</a></li>
-                    <li class="nav-item"><a href="faq.html" class="nav-link">FAQ</a></li>
+                    <li class="nav-item"><a href="login.html" class="nav-link">Learn</a></li>
+                    <li class="nav-item"><a href="login.html" class="nav-link">Stories</a></li>
+                    <li class="nav-item"><a href="login.html" class="nav-link">Discuss</a></li>
+                    <li class="nav-item"><a href="login.html" class="nav-link">FINvestment</a></li>
                     <li class="nav-item"><a href="login.html" class="nav-link">My Account</a></li>
                 </ul>
 
