--- a/quiz_last.html
+++ b/quiz_last.html
@@ -30,7 +30,7 @@
             </div>
             <div class="col-md-6 my-4"></div>
                 <div class="loading-container">
-                <div class="load-bar"></div>
+                <div class="load-bar" style="width: 100%;"></div>
             </div>
       </div>
     </div>
@@ -66,7 +66,7 @@
     <div class="container border-top" id="bottom_container">
         <div class="row justify-content-end pt-2 pb-2">
             <div class="col-6 col-sm-4"></div>
-            <div class="col-6 col-sm-4"><button type="button" href="homepage.html" id="continueButton" class="btn btn-lg btn-success">Continue</button></div>
+            <div class="col-6 col-sm-4"><a type="button" href="homepage.html" id="continueButton" class="btn btn-lg btn-success">Continue</a></div>
         </div>
     </div>
 </body>
