--- a/quiz_last.html
+++ b/quiz_last.html
@@ -51,7 +51,7 @@
         <div class="container">
             <div class="row">
                 <div class="col-sm"></div>
-                <div class="col-sm"><iframe src="http://www.apfpif.com/images/achive.gif" width="480" height="430" frameBorder="0" class="rounded mx-auto d-block overflow-visible"></iframe></div>
+                <div class="col-sm"><iframe src="img/achive.gif" width="480" height="430" frameBorder="0" class="rounded mx-auto d-block overflow-visible"></iframe></div>
                 <div class="col-sm"></div>
             </div>
             <div class="row">
